<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="kitesdk_app_name" translatable="false">Kite SDK</string>
    <string name="kitesdk_action_bar_typeface_asset_name" translatable="false"></string>
    <string name="kitesdk_custom_typeface_file_name" translatable="false">""</string>
    <string name="kitesdk_powered_by">Powered by Kite.ly</string>
    <string name="kitesdk_unit_centimeters">centimeters</string>
    <string name="kitesdk_unit_inches">inches</string>
    <string name="kitesdk_unit_pixels">pixels</string>
    <string name="kitesdk_unit_centimeters_short">cm</string>
    <string name="kitesdk_unit_inches_short">in</string>
    <string name="kitesdk_unit_pixels_short">px</string>
    <string name="kitesdk_credit_card_number_hint" translatable="false">1234 5678 1234 5678</string>
    <string name="kitesdk_month_hint">MM</string>
    <string name="kitesdk_year_hint">YYYY</string>
    <string name="kitesdk_cvv_hint" translatable="false">123</string>
    <string name="kitesdk_title_choose_product_group" translatable="false">Print Shop</string>
    <string name="kitesdk_title_create_phone_case">Create Phone Case</string>
    <string name="kitesdk_title_image_source">Choose Photos</string>
    <string name="kitesdk_title_photobook">Photobook</string>
    <string name="kitesdk_title_calendar">Calendar</string>
    <string name="kitesdk_title_poster">Poster</string>
    <string name="kitesdk_title_basket">Basket</string>
    <string name="kitesdk_title_payment_sandbox">Payment (Sandbox)</string>
    <string name="kitesdk_title_payment">Payment</string>
    <string name="kitesdk_title_payment_source_sandbox">Payment Source (Sandbox)</string>
    <string name="kitesdk_title_payment_source">Payment Source</string>
    <string name="kitesdk_title_order_history">Order History</string>
    <string name="kitesdk_drawer_open">Drawer open</string>
    <string name="kitesdk_drawer_closed">Drawer closed</string>
    <string name="kitesdk_settings_title_show_notification_messages">Notification Messages</string>
    <string name="kitesdk_settings_title_support">Customer Support</string>
    <string name="kitesdk_settings_title_privacy">Privacy Policy</string>
    <string name="kitesdk_settings_title_terms">Terms of Use</string>
    <string name="kitesdk_settings_title_legal">Legal</string>
    <string name="kitesdk_settings_title_licences">Open-source Licences</string>
    <string name="kitesdk_settings_summary_licences">Licence details for open-source software</string>
    <string name="kitesdk_settings_title_build_version">Build Version</string>
    <string name="kitesdk_preference_key_show_notification_messages" translatable="false">preference_key_show_notification_messages</string>
    <string name="kitesdk_preference_key_support" translatable="false">preference_key_support</string>
    <string name="kitesdk_preference_key_legal" translatable="false">preference_key_legal</string>
    <string name="kitesdk_preference_key_privacy" translatable="false">preference_key_privacy</string>
    <string name="kitesdk_preference_key_build_version" translatable="false">preference_key_build_version</string>
    <string name="kitesdk_license_title_picasso">Picasso</string>
    <string name="kitesdk_license_url_picasso">https://raw.githubusercontent.com/square/picasso/picasso-parent-2.5.2/LICENSE.txt</string>
    <string name="kitesdk_license_grid_view">GridView with Header and Footer</string>
    <string name="kitesdk_license_url_grid_view">https://raw.githubusercontent.com/liaohuqiu/android-GridViewWithHeaderAndFooter/1.0.12/LICENSE.txt</string>
    <string name="kitesdk_alert_dialog_title_pack_not_full_format_string">You have selected %s</string>
    <string name="kitesdk_alert_dialog_message_pack_not_full_format_string" tools:ignore="PluralsCandidate">You can add %d more for the same price</string>
    <string name="kitesdk_alert_dialog_title_oops">@string/kitesdk_Oops_</string>
    <string name="kitesdk_alert_dialog_message_pricing_format_string">There was a problem retrieving pricing from the server:\n%s</string>
    <string name="kitesdk_alert_dialog_title_internal_error">Internal Error</string>
    <string name="kitesdk_alert_dialog_title_no_intent" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_intent">There was an error: no intent was passed to the fragment. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_arguments" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_arguments">There was an error: no arguments were passed to the fragment. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_asset_list" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_asset_list">There was an error: no asset list was found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_asset" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_asset">There was an error: no asset was found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_mask" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_mask">There was an error: no mask was found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_product" translatable="false">@string/kitesdk_alert_dialog_title_internal_error</string>
    <string name="kitesdk_alert_dialog_message_no_product">There was an error: no product was found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_error_retrieving_products">Error Retrieving Products</string>
    <string name="kitesdk_alert_dialog_message_error_retrieving_products">There was an error retrieving the products. Please check your internet connection, or the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_no_product_group_label">No Product Group</string>
    <string name="kitesdk_alert_dialog_message_no_product_group_label">There was an error: no product group was found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_product_not_found">Product Not Found</string>
    <string name="kitesdk_alert_dialog_message_product_not_found">No product could be found. Please check the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_create_order">Create Order</string>
    <string name="kitesdk_alert_dialog_message_no_cropped_image_asset">There was an internal error - Kite was unable to create a cropped image asset.</string>
    <string name="kitesdk_alert_dialog_title_load_image">Could Not Load Image</string>
    <string name="kitesdk_alert_dialog_message_could_not_load_image">An image could not be loaded. Please check your internet connection, or the log for more details.</string>
    <string name="kitesdk_alert_dialog_title_delete_photo">Delete Photo?</string>
    <string name="kitesdk_alert_dialog_message_delete_photo">Are you sure you want to delete this photo?</string>
    <string name="kitesdk_alert_dialog_delete_photo_cancel_text">Keep</string>
    <string name="kitesdk_alert_dialog_delete_photo_confirm_text">Delete</string>
    <string name="kitesdk_alert_dialog_message_no_images_selected">Please select some images first.</string>
    <string name="kitesdk_alert_dialog_message_no_recipient">Please enter a recipient name</string>
    <string name="kitesdk_alert_dialog_message_no_line1">Please fill in Line 1 of the address</string>
    <string name="kitesdk_alert_dialog_message_no_postal_code">Please fill in your Postcode / ZIP code</string>
    <string name="kitesdk_alert_dialog_message_no_email_address">Please enter an email address</string>
    <string name="kitesdk_alert_dialog_message_no_city">Please fill in your city</string>
    <string name="kitesdk_alert_dialog_title_invalid_delivery_address">Invalid Delivery Address</string>
    <string name="kitesdk_alert_dialog_message_invalid_delivery_address">Please choose a delivery address</string>
    <string name="kitesdk_alert_dialog_title_invalid_email_address">Invalid Email Address</string>
    <string name="kitesdk_alert_dialog_message_invalid_email_address">Please enter a valid email address</string>
    <string name="kitesdk_alert_dialog_title_invalid_phone_number">Invalid Phone Number</string>
    <string name="kitesdk_alert_dialog_message_invalid_phone_number">Please enter a valid phone number</string>
    <string name="kitesdk_alert_dialog_message_connectivity">Please check your internet connectivity and then try again</string>
    <string name="kitesdk_alert_dialog_title_processing" translatable="false">@string/kitesdk_Processing_</string>
    <string name="kitesdk_alert_dialog_message_processing">One moment…</string>
    <string name="kitesdk_alert_dialog_title_end_customer_session">End Session</string>
    <string name="kitesdk_alert_dialog_message_end_customer_session">Are you sure you want to end your session?</string>
    <string name="kitesdk_alert_dialog_title_remove_item">Remove Item</string>
    <string name="kitesdk_alert_dialog_message_remove_item">Please confirm that you wish to remove this item from your basket.</string>
    <string name="kitesdk_alert_dialog_title_empty_basket">Empty Basket</string>
    <string name="kitesdk_alert_dialog_message_empty_basket">Your basket is currently empty. Please add an item before you proceed to the checkout.</string>
    <string name="kitesdk_alert_dialog_message_uploading_images">Uploading images</string>
    <string name="kitesdk_alert_dialog_message_unable_to_store_card">Unable to store card</string>
    <string name="kitesdk_alert_dialog_message_no_payment_id">No payment id found in proof of payment</string>
    <string name="kitesdk_alert_dialog_message_no_proof_of_payment">No proof of payment found in payment confirmation</string>
    <string name="kitesdk_alert_dialog_message_no_paypal_confirmation">No payment confirmation received from PayPal</string>
    <string name="kitesdk_alert_dialog_message_card_expired">Sorry it looks like that card has expired. Please try again.</string>
    <string name="kitesdk_alert_dialog_message_card_not_recognised">Sorry we couldn\'t recognise your card. Please try again manually entering your card details if necessary.</string>
    <string name="kitesdk_alert_dialog_item_pay_with_new_card">Pay with new card</string>
    <string name="kitesdk_alert_dialog_item_pay_with_existing_card_format_string">Pay with card ending %1$s</string>
    <string name="kitesdk_log_out_warning">Automatically\nlogging you out in</string>
    <string name="kitesdk_Cancel">Cancel</string>
    <string name="kitesdk_Log_Out">Log Out</string>
    <string name="kitesdk_shipping_delivery_address_button_text">Choose Delivery Address</string>
    <string name="kitesdk_shipping_email_hint_text" translatable="false">@string/kitesdk_Email</string>
    <string name="kitesdk_shipping_phone_hint_text">Phone number</string>
    <string name="kitesdk_shipping_email_reason">Your email is required so that we can send you order confirmation updates.</string>
    <string name="kitesdk_shipping_phone_reason">Your phone number is required in case there are any delivery issues.</string>
    <string name="kitesdk_scan_qr_code">Scan QR Code</string>
    <string name="kitesdk_scan_qr_code_instructions">Please scan the QR code using a\nQR reader app on your device.</string>
    <string name="kitesdk_scan_qr_code_alternate_instructions">Alternatively type the following URL into your mobile browser\'s address bar:</string>
</resources>