<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ly.kite.widget.CustomTypefaceButton
                    android:id="@+id/address_picker_button"
                    style="@style/ShippingAddressPickerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="onChooseDeliveryAddressButtonClicked"
                    android:text="@string/kitesdk_shipping_delivery_address_button_text"
                    android:textSize="@dimen/delivery_address_button_text_size"/>

                <ly.kite.widget.CustomTypefaceEditText
                    android:id="@+id/email_edit_text"
                    style="@style/ShippingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/kitesdk_shipping_email_hint_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <ly.kite.widget.CustomTypefaceTextView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kitesdk_shipping_email_reason"
                    android:textSize="@dimen/explanation_text_size"/>

                <ly.kite.widget.CustomTypefaceEditText
                    android:id="@+id/phone_edit_text"
                    style="@style/ShippingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/kitesdk_shipping_phone_hint_text"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <ly.kite.widget.CustomTypefaceTextView
                    android:id="@+id/phone_require_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/kitesdk_shipping_phone_reason"
                    android:textSize="@dimen/explanation_text_size"/>

                <ly.kite.widget.CustomTypefaceTextView
                    android:id="@+id/privacy_terms_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/privacy_terms_text_padding"
                    android:textSize="@dimen/privacy_terms_text_size"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/include_powered_by"/>

    <include layout="@layout/include_cta_bar"/>

</LinearLayout>
