<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/log_out_dialog_width"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/screen_horizontal_margin"
    android:paddingTop="@dimen/screen_vertical_margin"
    android:paddingRight="@dimen/screen_horizontal_margin"
    android:paddingBottom="@dimen/screen_vertical_margin"
    android:orientation="vertical">

    <ly.kite.widget.CustomTypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="@dimen/inactivity_warning_description_text_size"
        android:textStyle="bold"
        android:textColor="@color/prompt_text"
        android:text="@string/kitesdk_log_out_warning"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <ly.kite.widget.CustomTypefaceTextView
            android:id="@+id/time_remaining_text_view"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:background="@drawable/logout_ring"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textSize="@dimen/inactivity_warning_time_remaining_text_size"
            android:textStyle="bold"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ly.kite.widget.CustomTypefaceButton
            android:id="@+id/log_out_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inactivity_warning_log_out_button_background"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/kitesdk_Log_Out"/>
        <ly.kite.widget.CustomTypefaceButton
            android:id="@+id/cancel_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inactivity_warning_cancel_button_background"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:text="@string/kitesdk_Cancel"/>
    </LinearLayout>

</LinearLayout>